<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DataActivity">

    <TextView
        android:id="@+id/device_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/test"
        android:textSize="18sp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/device_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/test"
        android:textSize="18sp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/device_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/gender"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/test"
        android:textSize="18sp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/device_address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/sensor_data"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/test"
        android:textSize="18sp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/gender"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/connection_state"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/test"
        android:textSize="18sp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/sensor_data"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/read_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/learn_start"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/connection_state"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/stop_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/learn_stop"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/read_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
